# raddar

./: .dockerignore  .env_template  .gitignore  .isort.cfg  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mypy.ini  pylintrc  pyproject.toml  requirements.txt  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: analyze.yml
raddar/: main.py
raddar/api/api_v1/: api.py
raddar/api/api_v1/endpoints/: projects.py  webhooks.py
raddar/core/: celery_app.py  contexts.py  dependencies.py  security.py  settings.py
raddar/crud/: crud.py
raddar/db/: __init__.py  database.py
raddar/lib/: custom_typing.py  exception.py
raddar/lib/managers/: detect_secrets_manager.py  repository_manager.py
raddar/models/: models.py
raddar/schemas/: schemas.py
raddar/templates/: base.html  dashboard.html  projects.html
