[tool.poetry]
name = "raddar"
version = "0.1.0"
description = ""
authors = ["Tioborto"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.12.2"
detect-secrets = "^0.14.3"
SQLAlchemy = "^1.3.20"
GitPython = "^3.1.9"
pydantic = {extras = ["dotenv"], version = "^1.7.4"}
celery = "^5.0.4"
databases = {extras = ["postgresql"], version = "^0.4.1"}
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
mypy = "^0.790"
pylint = "^2.6.0"
pytest = "^6.1.2"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
